--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ permalink: pretty
 # ----------------------- #
 
 social:
-  # - title: facebook
-  #   url: https://www.facebook.com/yukihiro.moriyama.3
+  - title: facebook
+    url: https://www.facebook.com/yukihiro.moriyama.3
   - title: github
     url: https://github.com/YukihiroMoriyama
